# Photorealistic-Street-Maps

./: .codespell-ignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  combined.glb  dotenv_builder.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  create-mesh-builder-pr.yml  pre-commit.yml
docs/: architecture.md  contributing.md  getting-started.md  index.md
docs/api/: common.md  pipeline.md  profiler.md  providers.md
docs/pipeline/: data-processing.md  evaluation.md  mesh-generation.md  overview.md  texturing.md
src/: __init__.py  main.py  test.py
src/common/: MeshExport.py  MeshUtils.py  ProgressMonitor.py  __init__.py  constants.py  pipeline.py  pipeline_chain.py  profiler.py
src/common/conversions/: __init__.py  basic.py  utm.py
src/common/convertions/: __init__.py  basic.py  utm.py
src/common/provider/: __init__.py  mapillary.py  osm_client.py
src/common/providers/: __init__.py  mapillary.py  osm.py  overpass.py
src/data_ingest/: ingest.py
src/mesh_builder/: extrude.py
src/segmentation/: __init__.py  obstruction.py
src/texturing/: tex_projection.py
tests/: conftest.py  test_dotenv_builder.py  test_pipeline.py
tests/conversions/: test_basic.py
tests/unit/conversions/: test_basic.py
