[project]
name = "photorealistic-street-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashp116",email = "ashp116@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "trimesh (>=4.11.3,<5.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "mapillary (>=1.0.15,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "photorealistic_street_maps", from = "src"}]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.5,<0.16.0)"
]
