[project]
name = "photorealistic-street-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashp116",email = "ashp116@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<4.0"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "mapillary (>=1.0.15,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pint (>=0.25.2,<0.26.0)",
    "trimesh (>=4.11.3,<5.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "triangle (>=20250106,<20250107)"
]

[tool.poetry]
packages = [{include = "photorealistic_street_maps", from = "src"}]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.5,<0.16.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
