[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "photorealistic-street-maps"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [ { name = "Ashp116", email = "ashp116@outlook.com" } ]
requires-python = ">=3.11,<4.0,!=3.14.1"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "dotenv>=0.9.9,<0.10",
  "mapillary>=1.0.15,<2",
  "networkx>=3.6.1,<4",
  "numpy>=2.4.3,<3",
  "opencv-python>=4.13.0.92,<5",
  "pillow>=12.1.1,<13",
  "pint>=0.25.2,<0.26",
  "pyproj>=3.7.2,<4",
  "requests>=2.32.5,<3",
  "tqdm>=4.67.3,<5",
  "triangle>=20250106,<20250107",
  "trimesh>=4.11.3,<5"
]

[dependency-groups]
dev = [ "pre-commit>=4.3,<5", "pytest>=9.0.2,<10", "ruff>=0.15.5,<0.16" ]

[tool.poetry]
packages = [ { include = "photorealistic_street_maps", from = "src" } ]
package-mode = false

[tool.pyright]
extraPaths = [ "src" ]

[tool.pytest]
ini_options.pythonpath = [ "src" ]
ini_options.testpaths = [ "tests" ]
